Added Centaur to Dota 2
Just changed Greater Fortitude to Stampede, without updating tips.

--- a/TODO.txt
+++ b/TODO.txt
@@ -85,6 +85,9 @@ WISP
       
       tranquils, urn, wand
 
+CENT
+    + Needs updated tips for Stampede update.
+
 JUGGER
     + Currently lacks a hero description (only has tips).
 
